# matmul.metal

./: CMakeLists.txt  LICENSE  README.md  args.h  kernel.c  kernel.h  main.c  matmul.c  matmul.h  matmul.metal  metal.h  metal.m  np.py  types.h
